<resources>
    <string name="app_name">Aston_Intensiv_Final</string>
    <string name="sources">Sources</string>
    <string name="saved">Saved</string>
    <string name="headlines">Headlines</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="newsApp">NewsAPP</string>
    <string name="date">Date</string>
    <string name="language">Language</string>
    <string name="choose_date">Choose date</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="traveling">Traveling</string>
    <string name="one_date">%1$s,%2$s</string>
    <string name="two_date">%1$s-%2$s, %3$s</string>
    <string name="description">Description</string>
    <string name="title">TITLE</string>
    <string name="science">Science</string>
    <string name="country">Country</string>
    <string name="delimiter">|</string>
    <string name="add_to_saved">Add to saved</string>
    <string name="delete_in_saved">Delete in saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>