<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="89dp"
    android:padding="16dp">

    <ImageView
        android:id="@+id/sourceImage"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_news_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sourceTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sourceImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/sourceCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/sourceImage"
        app:layout_constraintTop_toBottomOf="@+id/sourceTitle"
        tools:text="@string/description" />

    <TextView
        android:id="@+id/delimiter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/delimiter"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/sourceCategory"
        app:layout_constraintTop_toBottomOf="@+id/sourceTitle" />


    <TextView
        android:id="@+id/sourceCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/delimiter"
        app:layout_constraintTop_toBottomOf="@+id/sourceTitle"
        tools:text="@string/country" />

</androidx.constraintlayout.widget.ConstraintLayout>